welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: not found: value x
	while (setPos(x,y)=!getPos(getMondeHauteur()-1,getMondeHauteur()-1)) {
                      ^ColumnByColumn:2: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
			ecritMessage()
                        ^ColumnByColumn:3: error: not found: value x
			setPos(x+1,y+1)
                               ^