welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	while (setPos(x,y)=!getPos(getMondeHauteur()-1,getMondeHauteur()-1)) {
			ecritMessage()
			setPos(x+1,y+1)
		}
}